--- a/public/index.html
+++ b/public/index.html
@@ -42,3 +42,4 @@
     -->
   </body>
 </html>
+<script data-ad-client="ca-pub-6613307717096078" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
