--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158959584-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-158959584-1');
+    </script>
+
     <meta charset="utf-8" />
+    <meta name="description" content="Simple & free URL shortener. You can also get private or/and expiring URLs.">
+    <meta name="keywords" content="URL shortener, private URL shortener, expiring URL">
+    <meta name="author" content="Iago Brayham">
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
